fix: scroll enable on smaller screen (#51)
* fix: scroll enable on smaller screen

* fix: fixed review error width

* fix: make rubric and review error width align

* fix: rubric position to be sticky

* fix: remove double scroll bar at the bottom for small screen

* fix: make submission more response on small screen

* fix: rubric sticky and margin correctly on smaller screen

* chore: linting and update snapshot

* fix: make submission title resize to smaller on smaller screen

* fix: miss align rubic and submission file on the top

* fix: padding size on small screen

* feat: add optional on feedback comment for clarity

* chore: update test

--- a/src/components/FilePreview/FileCard.scss
+++ b/src/components/FilePreview/FileCard.scss
@@ -2,6 +2,12 @@
 
 .file-card {
   margin: map-get($spacers, 1) 0;
+
+  .file-card-title {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
 }
 
 .image-renderer {
@@ -18,4 +24,10 @@
 
 .txt-renderer {
   white-space: pre-wrap;
+}
+
+@include media-breakpoint-down(sm) {
+  .file-card-title {
+    width: map-get($container-max-widths, "sm")/2;
+  }
 }
